Adjust alignment of secondary nav and navigation social Affects issue #3

--- a/source/assets/stylesheets/structures/_navigation.sass
+++ b/source/assets/stylesheets/structures/_navigation.sass
@@ -227,7 +227,7 @@
   +respond-to($g-m)
     margin-top: 0
     position: absolute
-    right: 0
+    right: $g-gutter
     top: (-$b-space * 1.75)
   +respond-to($navigation-vertical-s, max-height)
     margin-top: 0
