--- a/source/assets/stylesheets/structures/_social.sass
+++ b/source/assets/stylesheets/structures/_social.sass
@@ -28,7 +28,7 @@
   transition: all 500ms $b-transition
   visibility: hidden
   +respond-to($g-m)
-    left: 0
+    left: $g-gutter
     opacity: 1
     margin-top: 4px
     padding-top: 0
